Version 1.3.4 - xx xxx 2009

  * Bundle MSVCPxx.DLL with the Windows Ruby build.

  * Handle malformed multi-part response if enabled.
    Ticket #112.

  * Add GetForeignKeys() to RetsMetadata. Ticket #115.
  
  * Correct case on Zend/zend.h in configure. Ticket #116.

Version 1.3.3 - 15 Jul 2009
  
  * SWIG 1.3.39 uses feature Generics for C# and Mono MCS
    doesn't handle that. Ticket #109.

  * Update demo programs to reflect new demo server defaults.
    Ticket #110.

  * SWIG fails to properly compile polymorphic GetMetadata and
    Search for PHP. Disable those APIs. Ticket #111.

Version 1.3.2 - 05 Jun 2009

  * Clean up autoconf warnings. Enable -fPIC as default.

  * Attempt to detect Java Home. Ticket #83.

  * Check for SWIG dependent language headers before 
    enabling that language. Ticket #88.

  * Ruby exceptions are cryptic. Ticket #96.

  * Add PERL to "make install". Ticket #103.

  * Clean up g++ deprecation warnings. Ticket #104.

  * Make default encoding ISO. Ticket #105.

  * Properly detect boost versioned libraries on OS X. 
    Ticket #106

  * Clean up memory leaks. Ticket #107.

Version 1.3.1 - 18 Mar 2009

  * Expose RetsVersionToString to SWIG languages. Ticket #92.

  * Expose Raw RETS enhancement to .NET. Ticket #93.

  * Add RETS/1.7.2 functionality. Ticket #97.

  * Add try/catch blocks around lexical_cast in GetObject 
    and GetObjectResponse. Ticket #98.

  * Added GetRetsReplyCode() and GetRetsReplyText() to
    ObjectDescriptor and will parse text/xml files in
    multipart responses. Ticket #99. 

  * Modify configure scripts for POSIX 1003.2 compliance.
    Ticket #100.

  * Handle Boost versioned libraries. Ticket #101.

  * Calling HasMaxRows() causes only one row to be returned.
   Ticket #102.

Version 1.3.0b1 - 06 Jan 2009

  * Converted the http client model to allow for parallel
    search requests. Ticket #73.

  * Report XML parse error "no element found" as an http