@@ -9,6 +9,9 @@ Version 1.3.4 - xx xxx 2009
   
   * Correct case on Zend/zend.h in configure. Ticket #116.
 
+  * Add SetWildIndicator and GetWildIndicator to ObjectDescriptor.
+    Ticket #118.
+
 Version 1.3.3 - 15 Jul 2009
   
   * SWIG 1.3.39 uses feature Generics for C# and Mono MCS
